スキンの分割処理を組み入れた