@@ -12,8 +12,7 @@ class ScalaTanDashProject(info: ProjectInfo) extends DefaultWebstartProject(info
 
     val newPath = System.getProperty("java.library.path") + ":" + ("lib"/"lwjgl"/"native"/os)
 
-    override def runJVMOptions = super.runJVMOptions ++ Seq("-Djava.library.path=" + newPath,
-      "-XX:+UseConcMarkSweepGC", "-XX:+CMSParallelRemarkEnabled", "-XX:+UseParNewGC")
+    override def runJVMOptions = super.runJVMOptions ++ Seq("-Djava.library.path=" + newPath)
 
     override def scalaJars = buildScalaInstance.libraryJar :: buildScalaInstance.compilerJar :: Nil
   })
@@ -33,7 +32,7 @@ class ScalaTanDashProject(info: ProjectInfo) extends DefaultWebstartProject(info
         <all-permissions/>
       </security>
       <resources>
-        <j2se version="1.5+" java-vm-args="-XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseParNewGC" />
+        <j2se version="1.5+" />
         { defaultElements(libraries) }
         <extension name="LWJGLExtension" href="http://lwjgl.org/jnlp/extension.php"/>
       </resources>
